LEGEND
------
  [!] New plugin
  [+] New feature
  [*] Enhancement
  [-] Bug fix



------
  [!] Added new plugin for notifications about birthdays
  [+] Added ability to show a minimized window with the message when notification received
  [+] Added date separators in chat windows and conferences
  [*] Notice of user activity in the chat duplicated on the chat tab
  [*] Added new types of notifications and changed the way of their settings
  [*] Added context menu for tabs in tabwindow
  [*] Search for contact-list starts automatically, just start typing the word
  [*] Added ability to rename contacts and groups directly in the contact list
  [*] Added ability to execute operations on multiple items in roster
  [*] Notification of request for authorization is now deleted automatically in case of confirmation or removal of authorization from another resource
  [*] Added support for transferring files via SOCKS5 in conferences
  [-] XML parser did not correctly handle the elements with not declared prefixes, which caused to the breaking the connection
  [-] Fixed bug in Digest-MD5 authorization for which was not possible to log on some servers
  [-] When leaving the hidden conferences also closed the conference on non-active tabs
  [-] In the history view could appear duplicates of conversations
  [-] Did not correctly handle changes in the participant's nickname when new nickname is already used by the same participant but from a different resource
  [-] Incorrectly requested history of communication when connected to a server Openfire with plugin Open Archive

v1.1.0
------
  [!] Added new plugin for remote controlling
  [+] Added shortcuts support
  [+] Added ability to show tabs at the bottom of the tab windows
  [+] Added support of XEP-0199 - XMPP Ping
  [+] Added maintenance history of visited conferences
  [+] Changes of contact status and entry/exit of participants in conference are stored in the history