@@ -85,5 +85,29 @@
         <source>Logout from transport</source>
         <translation>Відключитися від транспорту</translation>
     </message>
+    <message numerus="yes">
+        <source>You are assured that wish to remove a transport &apos;&lt;b&gt;%1&lt;/b&gt;&apos; and its &lt;b&gt;%n contacts&lt;/b&gt; from roster?</source>
+        <translation type="unfinished">
+            <numerusform></numerusform>
+            <numerusform></numerusform>
+            <numerusform></numerusform>
+        </translation>
+    </message>
+    <message numerus="yes">
+        <source>You are assured that wish to remove &lt;b&gt;%n transports&lt;/b&gt; and their contacts from roster?</source>
+        <translation type="unfinished">
+            <numerusform></numerusform>
+            <numerusform></numerusform>
+            <numerusform></numerusform>
+        </translation>
+    </message>
+    <message>
+        <source>Remove transport and its contacts</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Remove transports and their contacts</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 </TS>
